# autofeat

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  example.ipynb  mypy.ini  pyproject.toml  renovate.json  ui.py
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: labels.yaml  renovate.json  reviewers.yaml
.github/workflows/: ci.yaml  maintenance.yaml  release.yaml  triage.yaml
app/: autofeat.py
autofeat/: __init__.py  attribute.py  dataset.py  extract.py  model.py  problem.py  schema.py  settings.py  solver.py  table.py
autofeat/analysis/: __init__.py  extract_features.py  extract_filters.py  extract_tables.py
autofeat/convert/: __init__.py  into_columns.py  into_data_frame.py  into_dataset.py  into_exprs.py  into_filters.py  into_lazy_frame.py  into_msgpack.py  into_named_exprs.py  into_schema.py  into_series.py  into_tables.py
autofeat/dataset/: __init__.py  base.py  derived_dataset.py  kaggle.py  kaggle_competition.py  kaggle_dataset.py  merged_dataset.py
autofeat/predictor/: __init__.py  base.py  baseline.py  catboost.py  lightgbm.py  random_forest.py  xgboost.py
autofeat/selector/: __init__.py  base.py  boruta.py  correlation.py  feature_importance.py  mutual_information.py  permutation_importance.py  shapley_impact.py
autofeat/source/: __init__.py  from_csv.py  from_example.py  from_kaggle.py  from_msgpack.py  from_sql.py  from_tables.py  from_testdata.py
autofeat/transform/: __init__.py  aggregate.py  all_of.py  any_of.py  base.py  cast.py  collect.py  combine.py  combine_and_or.py  cutoff.py  drop.py  encode.py  extract.py  filter.py  identity.py  impute.py  join.py  keep.py  rename.py  require.py  select.py  shrink.py  union.py  window.py
autofeat/ui/: __main__.py  binary_classification_analysis.py  column_selector.py  combine_features.py  dataset_explorer.py  dataset_loader.py  edit_dataset.py  edit_schema.py  edit_schemas.py  edit_settings.py  evaluate_model.py  explore_dataset.py  explore_features.py  explore_predictions.py  feature_loader.py  load_dataset.py  make_predictions.py  regression_analysis.py  schema_editor.py  show_log.py  train_model.py  transform_editor.py  upload_new_predictions.py
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
dummy_data/: create_churn_data.py
notebooks/: benchmark.ipynb  customer_transactions.ipynb  default_risk.ipynb  feature_extraction.ipynb  feature_selection.ipynb  gpu_acceleration.ipynb  house_prices.ipynb  serialization.ipynb
streamlit/pages/: 1_example.py
tests/: test_classification_report.py  test_convert.py  test_dataset.py  test_regression_report.py  test_report.py  test_schema.py  test_table.py  test_transform.py  test_ui.py
