[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = true
show_error_codes = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "boruta.*",
  "catboost.*",
  "plotly.*",
  "pygwalker.*",
  "shap.*",
  "sklearn.*"
]

[tool.poetry]
authors = ["Ashwin Madavan <ashwin.madavan@gmail.com>"]
description = "EDA Automation"
name = "autofeat"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boruta = "^0.4.3"
catboost = "^1.2.7"
cudf-polars-cu12 = {source = "nvidia", version = "^24.8.3"}
faker = "^30.1.0"
kaggle = "^1.6.17"
lightgbm = "^4.5.0"
llvmlite = "^0.43.0"
loguru = "^0.7.2"
networkx = "^3.3"
numba = "^0.60.0"
ormsgpack = "^1.5.0"
polars = "^1.6.0"
pygwalker = "^0.4.9.9"
python = "^3.11"
rich = "^13.8.1"
scikit-learn = "^1.5.2"
shap = "^0.46.0"
streamlit = "^1.38.0"
streamlit-elements = "^0.1.0"
xgboost = "^2.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
notebook = "^7.2.2"
pandas-stubs = "^2.2.2.240909"
py-spy = "^0.3.14"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
types-networkx = "^3.2.1.20240907"

[[tool.poetry.source]]
name = "nvidia"
priority = "supplemental"
url = "https://pypi.nvidia.com"

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = [
  # flake8
  "ASYNC",
  "C4",
  "COM",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  "FBT",
  # isort
  "I",
  "INT",
  # numpy
  "NPY",
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "Q",
  "RSE",
  # ruff
  "RUF",
  "T10",
  "TCH",
  "TID",
  "W"
]

[tool.tomlsort]
all = true
